All notable changes to this project will be documented in this file. For a
complete changelog, see https://github.com/jollejolles/pirecorder/commits/

Committed changes not yet in latest release:
2021-12-02
    * Added note about Bullseye not working with picamera and therefore pirecorder

2020-08-29 version 3.2.0
    * Added statement to camconfig and documentation website regarding minimum
      recommended resolution
    * Contribution statement added to README
    * Included improved statement of need in JOSS paper and documentation
    * Integrated ability to store ROI directly when running stream from the
      command line
    * Added test.py file for testing all functionalities of pirecorder
    * Improved paper in a number of ways
    * Changed user settings to facilitate getting max resolution
    * Fixed autoconfig stream not releasing camera after use
    * Some final improvements to the paper for JOSS
    * Small fixes
        - Added missing subdir to pirecorder settings documentation
        - Fixed delete parameter name in schedule documentation
        - Removed pandas as dependency of linked pythutils package
        - Fixed jekyll issue that prevented documentation website of not updating

2020-07-07 version 3.1.0
    * Added accompanying academic paper for pirecorder, submitted to The
      Journal of Open Source Software

2020-06-29 version 3.0.2
    * Updated recording mode to be able to record at higher framerates and
    * updated documentation with a note about high framerates.
    * Fixed resolution for images not needing to be divisible by multiples of 16

2020-06-28 version 3.0.1
    * Added steps to documentation to get the latest firmware
    * Updated recording mode to be able to record at higher framerates
    * Small fix to schedule function logfile filenaming
    * Small updates to documentation and website

2020-06-27 version 3.0.0
    Major update with a large number of additions, improvements, and fixes.

    Large additions: