@@ -2,6 +2,9 @@ All notable changes to this project will be documented in this file. For a
 complete changelog, see https://github.com/jollejolles/pirecorder/commits/
 
 Committed changes not yet in latest release:
+2021-02-09
+    * Added print statement to notify when custom brightness setting is being
+      overridden by setting in cusbright.yml file
 2021-12-02
     * Added note about Bullseye not working with picamera and therefore pirecorder
 
